--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,8 @@ baseurl: "" # Leave empty since your site is at the root of your domain
 url: "https://daimon-law.github.io/whitehat-safe-harbor" # No trailing slash
 
 # Build settings
-theme: minimal # If using a GitHub-supported theme, you can often just use the theme's short name
+remote_theme: pages-themes/minimal
+
 plugins:
   - jekyll-feed
 
